; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_qt202x_phy.c_qt202x_phy_get_module_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_qt202x_phy.c_qt202x_phy_get_module_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_nic = type { i32 }
%struct.ethtool_modinfo = type { i32, i32 }

@ETH_MODULE_SFF_8079 = common dso_local global i32 0, align 4
@ETH_MODULE_SFF_8079_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.efx_nic*, %struct.ethtool_modinfo*)* @qt202x_phy_get_module_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qt202x_phy_get_module_info(%struct.efx_nic* %0, %struct.ethtool_modinfo* %1) #0 {
  %3 = alloca %struct.efx_nic*, align 8
  %4 = alloca %struct.ethtool_modinfo*, align 8
  store %struct.efx_nic* %0, %struct.efx_nic** %3, align 8
  store %struct.ethtool_modinfo* %1, %struct.ethtool_modinfo** %4, align 8
  %5 = load i32, i32* @ETH_MODULE_SFF_8079, align 4
  %6 = load %struct.ethtool_modinfo*, %struct.ethtool_modinfo** %4, align 8
  %7 = getelementptr inbounds %struct.ethtool_modinfo, %struct.ethtool_modinfo* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 4
  %8 = load i32, i32* @ETH_MODULE_SFF_8079_LEN, align 4
  %9 = load %struct.ethtool_modinfo*, %struct.ethtool_modinfo** %4, align 8
  %10 = getelementptr inbounds %struct.ethtool_modinfo, %struct.ethtool_modinfo* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
